[package]
name = "crite-spranberry"
version = "0.1.0"
authors = ["circumspect <40770208+circumspect@users.noreply.github.com>"]
edition = "2018"


[dependencies]
anyhow = "1.0"
dotenv = "0.15"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.10", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
typetag = "0.1"
